<resources>
    <string name="user_agent" translatable="false">PremoFM-%s</string>
    <string name="temp_user_email_domain" translatable="false">temp.premo.fm</string>
    <string name="must_be_premo_fm_curator_title">Become a PremoFM Curator</string>
    <string name="must_be_premo_fm_curator">Only PremoFM Curators can share their collections.\n\nRequest to be a PremoFM Curator.</string>
    <string name="progress_authenticate_title">Please Wait</string>
    <string name="progress_authenticate_message">Your journey awaits...</string>
    <string name="action_mark_completed">Mark completed</string>
    <string name="action_mark_all_episodes_completed">Mark all episodes completed</string>
    <string name="action_delete_download">Delete download</string>
    <string name="action_download">Download</string>
    <string name="action_cancel_download">Cancel download</string>
    <string name="action_search">Search</string>
    <string name="action_category">Browse by category</string>
    <string name="action_filter">Filter</string>
    <string name="action_play">Play</string>
    <string name="action_share_episode">Share episode</string>
    <string name="action_share_channel">Share podcast</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_unfavorite">Unfavorite</string>
    <string name="action_add_to_queue">Add to now playing queue</string>
    <string name="action_show_queue">Show now playing queue</string>
    <string name="action_set_sleep_timer">Set sleep timer</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_episode">Delete episode</string>
    <string name="action_add">Add</string>
    <string name="action_enable_notifications">New episode notifications</string>
    <string name="action_enable_auto_download">Episode auto download</string>
    <string name="action_cast">Cast</string>
    <string name="action_pin">Pin</string>
    <string name="action_unpin">Unpin episode</string>
    <string name="action_set_playback_speed">Set playback speed</string>
    <string name="action_add_podcast">Add Podcast</string>
    <string name="dialog_opml_import">Import OPML</string>
    <string name="sleep_timer_title">Stop Playing After...</string>
    <string-array name="sleep_timer_labels">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
    </string-array>
    <string name="button_start_exploring">Let\'s Start Exploring</string>
    <string name="button_create_collection">Let\'s Create a Collection</string>
    <string name="button_try_again">Try Again</string>
    <string name="no_results_found_title">No Results Found</string>
    <string name="no_results_found_message">No results found for your search \'%s\'</string>
    <string name="no_episodes_title">Episodes</string>
    <string name="no_episodes_message">When you have things to listen to, they appear here.</string>
    <string name="no_channels_title">Podcasts</string>
    <string name="no_channels_message">Podcasts you are subscribed to would appear here.</string>
    <string name="no_collections_title">Collections</string>
    <string name="no_collections_message">The collections you create would appear here.  A collection is group of podcasts or episodes, like a playlist.</string>
    <string name="notification_title_enter_password">Sign back into PrēmoFM</string>
    <string name="notification_content_enter_password">Click to enter password</string>
    <string name="notification_title_insufficient_space">Unable to download episodes</string>
    <string name="notification_content_insufficient_space">There\'s not enough space on your device</string>
    <string name="notification_title_connection_error">Unable to connect while downloading</string>
    <string name="notification_content_connection_error">Unable to establish a connection to download episode %s</string>
    <string name="notification_downloading_episodes">Downloading %d episodes</string>
    <string name="notification_downloading_episode">Downloading %s</string>
    <string name="notification_new_episode">New episode - %s</string>
    <string name="notification_new_episodes">%d new episodes</string>
    <string name="notification_play_episode">Play</string>
    <string name="notification_show_notes">Info</string>
    <string name="notification_cancel_download">Cancel Download</string>
    <string name="notification_cancel_all_downloads">Cancel All Downloads</string>
    <string name="notification_title_episode_downloaded">Episode downloaded</string>
    <string name="notification_title_episodes_downloaded">%d episodes downloaded</string>
    <string name="episode_favorite">Favorited</string>
    <string name="filter_create_title">Create Filter</string>
    <string name="filter_edit_title">Edit Filter</string>
    <string name="filter_name_latest">Latest</string>
    <string name="filter_name_downloaded">Downloaded</string>
    <string name="filter_name_pinned">Pinned</string>
    <string name="filter_name">Name</string>
    <string name="filter_episodes_per_channel">Episodes per podcast</string>
    <string name="filter_by_collection">Limit by collection</string>
    <string name="filter_in_collection">Episodes in collection</string>
    <string name="filter_by_episode_status_label">Episodes that are</string>
    <string name="filter_episodes_added">User added</string>
    <string name="filter_pinned">Pinned</string>
    <string name="filter_limit_episodes_per_subscription">Limit per podcast</string>
    <string name="filter_limit_episodes_by_date">Limit by date</string>
    <string name="filter_episode_newer_than">Published since</string>
    <string-array name="filter_date_options">
        <item>Yesterday</item>
        <item>Last week</item>
        <item>Last month</item>
        <item>Six months ago</item>
    </string-array>
    <string-array name="filter_episodes_per_options">
        <item>1 episode</item>
        <item>2 episodes</item>
        <item>3 episodes</item>
        <item>4 episodes</item>
        <item>5 episodes</item>
        <item>6 episodes</item>
        <item>7 episodes</item>
    </string-array>
    <string name="dialog_please_wait">Please Wait</string>
    <string name="dialog_one_moment">It\'ll be a moment...</string>
    <string name="dialog_updating_title">Please Wait</string>
    <string name="dialog_updating_message">We are moving some things around behind the scenes...</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_create">Create</string>
    <string name="dialog_mark_completed">Mark Completed</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_got_it">Got it</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_cancel_timer">Cancel Timer</string>
    <string name="dialog_open_in_browser">Open in Browser</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_clear">Clear</string>
    <string name="dialog_delete_collection_confirmation">Delete this collection?</string>
    <string name="dialog_delete_downloaded_episodes_confirmation">Delete all downloaded episodes?</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_select_all">Select All</string>
    <string name="dialog_request">Request</string>
    <string name="dialog_no_collection_selected">No Collection Selected</string>
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_message">Are you sure you want to logout?</string>
    <string name="dialog_skipping_sign_up">By skipping sign up, you are creating a temporary account.  You can claim your account at your convenience in PremoFM.</string>
    <string name="dialog_mark_channel_completed">Mark podcast as completed?</string>
    <string name="dialog_select_playback_speed">Set playback speed</string>
    <string name="toast_deleting_all_episodes">Deleting all episodes</string>
    <string name="duration_in_progress">%s remaining</string>
    <string name="duration_finished">%s completed</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="title_activity_onboarding">Welcome</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="title_activity_play">Now Playing</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_channel_profile">Podcast Profile</string>
    <string name="title_activity_debug">Debug</string>
    <string name="title_activity_user_profile">Your Profile</string>
    <string name="title_activity_category">Browse by Category</string>
    <string name="user_profile_activity_name_hint">Email</string>
    <string name="title_fragment_home">Episodes</string>
    <string name="title_fragment_subscriptions">Podcasts</string>
    <string name="title_fragment_collections">Collections</string>
    <string name="title_fragment_explore">Explore</string>
    <string name="explore_fragment_type_top_channels">Top Podcasts</string>
    <string name="explore_fragment_type_trending_channels">Trending Podcasts</string>
    <string name="explore_fragment_type_top_collections">Top Collections</string>
    <string name="explore_fragment_type_top_episodes">Top Episodes</string>
    <string name="title_service_play">PodcastPlayerService</string>
    <string name="title_service_push_handler">PushHandlerService</string>
    <string name="drawer_action_home">Episodes</string>
    <string name="drawer_action_subscriptions">Podcasts</string>
    <string name="drawer_action_collections">Collections</string>
    <string name="drawer_action_feedback">Send feedback</string>
    <string name="drawer_action_about">About</string>
    <string name="drawer_action_settings">Settings</string>
    <string name="drawer_action_debug">Debug</string>
    <string name="new_collection">Create a new collection</string>
    <string name="channels">Podcasts</string>
    <string name="episodes">Episodes</string>
    <string name="collection_name">Name</string>
    <string name="collection_description">Description (Optional)</string>
    <string name="collection_create_filter">Create a Filter</string>
    <string name="collection_type">Type:</string>
    <string name="publish_collection">Share with everyone</string>
    <string name="episode_status_new">New</string>
    <string name="episode_status_played">Played</string>
    <string name="episode_status_completed">Completed</string>
    <string name="download_status_not_downloaded">Not Downloaded</string>
    <string name="download_status_downloaded">Downloaded</string>
    <string name="downloaded_episode_filtering">Enable downloaded episode filtering</string>
    <string name="completed_episode_filtering">Enable completed episode filtering</string>
    <string name="not_downloaded_episode_filtering">Enable not downloaded episode filtering</string>
    <string name="played_episode_filtering">Enable played episode filtering</string>
    <string name="new_episode_filtering">Enable new episode filtering</string>
    <string name="favorite_episode_filtering">Enable favorited episode filtering</string>
    <string name="collection_filtering">Enable episode collection filtering</string>
    <string name="published_since_filtering">Enable published date filtering</string>
    <string name="episodes_per_subscription_filtering">Enable episodes per subscription filtering</string>
    <string name="episodes_per_subscription">Episodes per subscription</string>
    <string name="collection">Collection</string>
    <string name="select">Select...</string>
    <string name="min_playback_speed" translatable="false">0.5x</string>
    <string name="max_playback_speed" translatable="false">2x</string>
</resources>