<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014.
  ~ Main Method Incorporated.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group
        android:id="@+id/main_actions"
        android:checkableBehavior="single">

        <item android:id="@+id/action_home"
            android:title="@string/drawer_action_home"
            android:icon="@drawable/ic_drawer_action_home"
            android:orderInCategory="1" />

        <item android:id="@+id/action_channels"
            android:title="@string/drawer_action_subscriptions"
            android:icon="@drawable/ic_drawer_action_channel"
            android:orderInCategory="2"/>

        <item android:id="@+id/action_collections"
            android:title="@string/drawer_action_collections"
            android:icon="@drawable/ic_drawer_action_collection"
            android:orderInCategory="3"/>

    </group>

    <group android:id="@+id/secondary_actions">

        <item
            android:id="@+id/action_settings"
            android:title="@string/drawer_action_settings"
            android:orderInCategory="4"/>

        <item
            android:id="@+id/action_feedback"
            android:title="@string/drawer_action_feedback"
            android:orderInCategory="5"/>

        <item
            android:id="@+id/action_about"
            android:title="@string/drawer_action_about"
            android:orderInCategory="6"/>

        <item
            android:id="@+id/action_debug"
            android:title="@string/drawer_action_debug"
            android:visible="false"
            android:orderInCategory="99"/>

    </group>
</menu>